<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    android:orientation="vertical">

    <include layout="@layout/menu_bar_with_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_profile"
        android:gravity="center"
        android:padding="7dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:textSize="18sp"/>
    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center">
        <!-- <a href="https://www.flaticon.com/free-icons/user" title="user icons">User icons created by Freepik - Flaticon</a> -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/profile_user"
            android:contentDescription="@string/user_picture"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_edit_40"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/edit_image_pencil"/>
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/gray"
        android:layout_marginTop="20dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNameOnProfileEdit"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/white"
            android:fontFamily="@font/montserrat_alternates_semi_bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkGreen"
            android:layout_below="@id/edtNameOnProfileEdit"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/gray"
        android:layout_marginTop="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailOnProfileEdit"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/white"
            android:fontFamily="@font/montserrat_alternates_semi_bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkGreen"
            android:layout_below="@id/edtEmailOnProfileEdit"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telephone_number"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/gray"
        android:layout_marginTop="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTelNumberOnProfileEdit"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/white"
            android:fontFamily="@font/montserrat_alternates_semi_bold"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darkGreen"
            android:layout_below="@id/edtTelNumberOnProfileEdit"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="@color/darkGreen"
            app:hintTextColor="@color/gray"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordOnProfileEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="18sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:background="@color/white"
                android:fontFamily="@font/montserrat_alternates_semi_bold"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/darkGreen"
                android:layout_below="@id/edtPasswordOnProfileEdit"/>
        </com.google.android.material.textfield.TextInputLayout>
        <ToggleButton
            android:id="@+id/showPasswordToggleButtonOnProfileEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff=""
            android:textOn=""
            android:background="?attr/selectableItemBackgroundBorderless"
            android:drawableEnd="@drawable/icon_eye_30"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/save_account"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/icon_check_30" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:drawableStartCompat="@drawable/icon_cross_mark_30"
            android:text="@string/delete_your_account"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"
            />
    </RelativeLayout>

</LinearLayout>